@@ -1,6 +1,6 @@
 /* ===============================
    Cards.css (partagé)
-   Uniquement : grilles + cartes
+   Uniquement : grilles + cartes + toggle (UI)
    =============================== */
 
 /* ===============================
@@ -16,7 +16,7 @@
   color: inherit;
   text-decoration: none;
 
-  overflow: hidden; /* ✅ clippe tout (dont l'image) dans le radius de la carte */
+  overflow: hidden; /* clippe tout dans le radius de la carte */
 }
 
 .ui-card:hover {
@@ -38,7 +38,7 @@
 }
 
 /* =========================================================
-   CAS CLINIQUES : GRILLE
+   CAS CLINIQUES : GRILLE (mode cartes)
    ========================================================= */
 
 .cc-grid {
@@ -74,8 +74,7 @@
 }
 
 /* =========================================================
-   CAS CLINIQUES : CARTES
-   Carte unique : une seule bordure (celle de la carte)
+   CAS CLINIQUES : CARTES (mode cartes)
    - cover en haut
    - badge en absolu sur la cover
    - body en dessous
@@ -86,13 +85,12 @@
   grid-template-rows: 160px auto;
   height: auto;
 
-  /* état repos : bordure visible */
   border: 1px solid var(--ifm-color-emphasis-300);
   background: var(--ifm-background-surface-color);
   box-shadow: var(--card-shadow);
 }
 
-/* hover/focus : même bordure (remplace celle de .ui-card:hover) */
+/* hover/focus : même bordure */
 .cc-card.ui-card:hover {
   border: var(--card-border-hover);
   box-shadow: var(--card-shadow-hover);
@@ -117,11 +115,10 @@
   background-position: center;
   background-repeat: no-repeat;
 
-  /* ✅ radius sur les 4 coins (donc aussi bottom) */
+  /* radius sur les 4 coins */
   border-radius: var(--card-radius);
   overflow: hidden;
 }
-
 
 /* Badge sur l’image (bas gauche) */
 .cc-thumb .cc-thumb-badge {
@@ -131,7 +128,7 @@
   z-index: 2;
 }
 
-/* Contenu : padding d'origine (sans gap) */
+/* Contenu */
 .cc-body {
   padding: 12px 14px 14px;
   display: grid;
@@ -157,7 +154,7 @@
   min-height: calc(2 * 1.35em);
 }
 
-/* Mobile (<= 560px) : thumbs moins hauts */
+/* Mobile : thumbs moins hauts */
 @media (max-width: 560px) {
   .cc-card.ui-card {
     grid-template-rows: 120px auto;
@@ -173,7 +170,7 @@
   }
 }
 
-/* Sur mobile / pointer coarse : pas d'effet hover */
+/* Mobile/pointer coarse : pas d'effet hover */
 @media (hover: none), (pointer: coarse) {
   .cc-card.ui-card:hover {
     border: 1px solid var(--ifm-color-emphasis-300);
@@ -181,6 +178,232 @@
     background: var(--ifm-background-surface-color);
     cursor: default;
   }
+}
+
+/* =========================================================
+   CAS CLINIQUES : MODE LISTE (grid multi-colonnes)
+   ========================================================= */
+
+.cc-grid.cc-grid--list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+  gap: 12px;
+
+  margin-top: 8px;
+  padding-top: 8px !important;
+  padding-bottom: 32px !important;
+}
+
+@media (max-width: 980px) {
+  .cc-grid.cc-grid--list {
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    gap: 10px;
+  }
+}
+
+@media (max-width: 560px) {
+  .cc-grid.cc-grid--list {
+    grid-template-columns: 1fr;
+  }
+}
+
+/* Carte horizontale */
+.cc-card.ui-card.cc-card--list {
+  display: grid;
+  grid-template-rows: none; /* annule le modèle cover en haut */
+  grid-template-columns: 120px minmax(0, 1fr);
+  align-items: stretch;
+  height: auto;
+}
+
+/* Thumb compact (la carte clippe déjà via .ui-card overflow:hidden) */
+.cc-card--list .cc-thumb {
+  width: 120px;
+  height: 92px;
+
+  border-radius: 0; /* évite un double arrondi interne */
+  overflow: hidden;
+}
+
+/* Badge bas gauche + anti-étalement si 2 lignes */
+.cc-card--list .cc-thumb .cc-thumb-badge {
+  left: 10px;
+  bottom: 10px;
+
+  /* évite le badge qui prend toute la largeur si retour à la ligne */
+  display: inline-flex;
+  width: fit-content;
+  max-width: calc(100% - 20px);
+
+  white-space: normal;
+  text-align: center;
+  overflow-wrap: anywhere;
+
+  align-items: center;
+  justify-content: center;
+
+  line-height: 1.1;
+}
+
+/* Body compact + extrait visible (si rendu en JSX) */
+.cc-card--list .cc-body {
+  padding: 12px 14px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 6px;
+}
+
+/* Titre en liste : pas de réserve 2 lignes imposée */
+.cc-card--list .cc-title {
+  font-size: 1.02rem;
+  line-height: 1.25;
+  min-height: 0;
+}
+
+/* Excerpt (si rendu en JSX) */
+.cc-card--list .cc-excerpt {
+  margin: 0;
+  font-size: 0.9rem;
+  line-height: 1.25;
+  opacity: 0.75;
+
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+
+  min-width: 0;
+}
+
+/* Responsive liste */
+@media (max-width: 560px) {
+  .cc-card.ui-card.cc-card--list {
+    grid-template-columns: 110px minmax(0, 1fr);
+  }
+
+  .cc-card--list .cc-thumb {
+    width: 110px;
+    height: 84px;
+  }
+
+  .cc-card--list .cc-body {
+    padding: 10px 12px;
+  }
+
+  .cc-card--list .cc-thumb .cc-thumb-badge {
+    left: 8px;
+    bottom: 8px;
+    max-width: calc(100% - 16px);
+  }
+}
+
+/* =========================================================
+   Toggle Cartes / Liste (icônes, sans ombre)
+   - coins arrondis uniquement aux extrémités
+   ========================================================= */
+
+.cc-toolbar--top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 12px;
+}
+
+.cc-toolbar--views {
+  margin-top: 12px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+/* conteneur segmented */
+.cc-viewtoggle {
+  display: inline-grid;
+  grid-auto-flow: column;
+  gap: 0;
+  padding: 0;
+
+  border-radius: 999px;
+  overflow: hidden; /* coupe les coins internes */
+  background: rgba(255, 255, 255, 0.04);
+  border: 1px solid rgba(255, 255, 255, 0.10);
+  box-shadow: none;
+}
+
+.cc-viewbtn {
+  border: 0;
+  background: transparent;
+  color: inherit;
+
+  width: 40px;
+  height: 34px;
+
+  display: grid;
+  place-items: center;
+
+  opacity: 0.75;
+  cursor: pointer;
+
+  border-radius: 0; /* coins internes droits */
+}
+
+/* coins externes uniquement */
+.cc-viewbtn:first-child {
+  border-top-left-radius: 999px;
+  border-bottom-left-radius: 999px;
+}
+
+.cc-viewbtn:last-child {
+  border-top-right-radius: 999px;
+  border-bottom-right-radius: 999px;
+}
+
+/* séparation subtile */
+.cc-viewbtn + .cc-viewbtn {
+  border-left: 1px solid rgba(255, 255, 255, 0.10);
+}
+
+.cc-viewbtn:hover {
+  opacity: 0.95;
+  background: rgba(255, 255, 255, 0.06);
+}
+
+.cc-viewbtn.active {
+  opacity: 1;
+  background: rgba(255, 255, 255, 0.12);
+}
+
+.cc-viewbtn:focus-visible {
+  outline: 2px solid rgba(255, 255, 255, 0.35);
+  outline-offset: -2px;
+}
+
+.cc-ico {
+  width: 18px;
+  height: 18px;
+  display: block;
+}
+
+/* thème light : rendu plus net */
+[data-theme='light'] .cc-viewtoggle {
+  background: rgba(0, 0, 0, 0.03);
+  border: 1px solid rgba(0, 0, 0, 0.10);
+}
+
+[data-theme='light'] .cc-viewbtn + .cc-viewbtn {
+  border-left: 1px solid rgba(0, 0, 0, 0.10);
+}
+
+[data-theme='light'] .cc-viewbtn:hover {
+  background: rgba(0, 0, 0, 0.04);
+}
+
+[data-theme='light'] .cc-viewbtn.active {
+  background: rgba(0, 0, 0, 0.06);
+}
+
+[data-theme='light'] .cc-viewbtn:focus-visible {
+  outline: 2px solid rgba(0, 0, 0, 0.25);
 }
 
 /* =========================================================
@@ -247,7 +470,7 @@
 }
 
 .doc-thumb.is-empty::after {
-  content: "";
+  content: '';
   width: 45%;
   height: 45%;
   border-radius: 0.9rem;
@@ -306,3 +529,12 @@
   width: fit-content;
   max-width: 100%;
 }
+/* Décalage optique des icônes vers le centre (à cause des bords arrondis) */
+.cc-viewbtn:first-child .cc-ico {
+  transform: translateX(1px);
+}
+
+.cc-viewbtn:last-child .cc-ico {
+  transform: translateX(-2px);
+}
+
